# 42_Python_for_DataScience

./: README.md
Day 0 - Starting/ex00/: Hello.py
Day 0 - Starting/ex01/: format_ft_time.py
Day 0 - Starting/ex02/: find_ft_type.py
Day 0 - Starting/ex03/: NULL_not_found.py
Day 0 - Starting/ex04/: whatis.py
Day 0 - Starting/ex05/: building.py
Day 0 - Starting/ex06/: filterstring.py  ft_filter.py
Day 0 - Starting/ex07/: sos.py
Day 0 - Starting/ex08/: Loading.py
Day 0 - Starting/ex09/: tester.py
Day 0 - Starting/ex09/ ft_package/: build.sh  pyproject.toml  setup.py
Day 1 - Array/ex00/: give_bmi.py
Day 1 - Array/ex01/: array2D.py  tester.py
Day 1 - Array/ex03/: load_image.py  tester.py  zoom.py
